--- a/(FE)/css/login page.css
+++ b/(FE)/css/login page.css
@@ -20,7 +20,7 @@ body {
   padding: 10px 20px;
   width: 100%;
   background-color: #fff;
-  border-bottom: 3px solid #aaa;
+  border-bottom: 3px solid #7a2195;
 }
 
 .navbar-left {
@@ -53,7 +53,7 @@ body {
   justify-content: right;
   flex: 1;
   gap: 100px;
-  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .navbar-center a {
@@ -99,169 +99,91 @@ body {
 .dropdown-menu a:hover {
   color: #6F4B9B;
 }
-.upper-section {
+
+.contact-section {
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 60px;
+  justify-content:center;
+  padding: 50px 100px;
   background-color: #5D2380;
-  color: white;
+  color: #fff;
 }
 
-.image-section img {
-  width: 100%;
-  max-width: 400px;
-  border-radius: 10px;
-  margin-left: 50px;
-  transform: translate(-150px, -20px);
+.header {
+  display: flex;
+  flex-direction: row; 
+  align-items: center; 
+  margin-bottom: 20px;
 }
 
-.quote {
-  position: absolute;
-  top: 50%;
-  left: 25%;
-  transform: translate(-10%, -10%);
-  background-color: white;
-  color: #333;
-  padding: 15px;
-  border-radius: 10px;
-  max-width: 300px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.line {
+  border: 0;
+  width: 50px; 
+  border-top: 3px solid #a200ff; 
+  margin-right: 5px; 
+  margin-top: 5px;
+
 }
 
-.quote p {
-  font-family: 'Poppins';
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-
-.quote span {
-  font-weight: bold;
+.header h3 {
   font-size: 12px;
-  color: #333;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #ffffff;
 }
 
-.text-section {
-  flex: 1;
+.contact-content {
   max-width: 500px;
 }
 
-.text-section h3 {
-  font-family: 'Poppins';
-  font-size: 14px;
-  letter-spacing: 2px;
-  color: #ccccff;
-  margin-bottom: 10px;
-}
-
-.text-section h2 {
-  font-family: 'Poppins';
-  font-size: 24px;
+.contact-content h2 {
+  font-size: 32px;
   font-weight: bold;
   margin-bottom: 20px;
-  line-height: 1.4;
 }
 
-.text-section p {
-  font-family: 'Poppins';
+.contact-content p {
   font-size: 16px;
-  line-height: 1.6;
-  color: #e0e0ff;
+  line-height: 1.5;
 }
 
-/* Desa Section */
-.middle-section {
+.contact-image {
+  width: 100%;
+  overflow-x: auto; /* Aktifkan scroll horizontal jika gambar lebih lebar dari container */
+  display: block;
+}
+
+.contact-image img {
+  max-width: 500px;
+}
+
+/* Info Section */
+.info-section {
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 60px 40px;
-  background-color: #ffffff;
-  position: relative;
+  background-color: #fff;
+  padding: 40px 20px;
 }
-
-.left-content {
+.info-image{
   display: flex;
-  align-items: center;
-  max-width: 1200px;
-  width: 100%;
-  gap: 40px;
+  padding: 20px;
 }
-
-.desa-image img {
-  width: 150%;
+.info-box {
   max-width: 300px;
-  border-radius: 10px;
+  text-align: start;
+  margin: 0 50px;
 }
 
-.desa-text {
-  max-width: 500px;
-}
-
-.desa-text h2 {
-  font-family: 'Poppins';
-  font-size: 24px;
+.info-box h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
   color: #333;
-  margin-bottom: 20px;
 }
 
-.desa-text p {
-  font-family: 'Poppins';
+.info-box p {
   font-size: 16px;
-  line-height: 1.6;
   color: #666;
-  margin-bottom: 20px;
-}
-
-/* UMKM Section */
-.umkm-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 60px 40px;
-  background-color: #e8f7f3;
-  position: relative;
-}
-
-.umkm-content {
-  display: flex;
-  align-items: center;
-  max-width: 1200px;
-  width: 100%;
-  gap: 40px;
-}
-
-.umkm-text {
-  max-width: 500px;
-  font-family: 'Montserrat';
-}
-
-.umkm-text h2 {
-  font-family: 'Montserrat';
-  font-size: 24px;
-  color: #333;
-  margin-bottom: 20px;
-  margin-left: 400px; /* Menggeser teks ke kanan */
-  margin-right: -350px; /* Menggeser teks ke kiri jika dibutuhkan */
-}
-
-.umkm-text p {
-  font-family: 'Montserrat';
-  font-size: 16px;
-  line-height: 1.6;
-  color: #666;
-  margin-bottom: 40px;
-  text-align: justify;
-  margin-left: 400px; /* Menggeser teks ke kanan */
-  margin-right: -350px; /* Menggeser teks ke kiri jika dibutuhkan */
-}
-
-.umkm-image img {
-  width: 100%;
-  max-width: 400px;
-  border-radius: 10px;
-  display: flex;
-  margin-top: -320px;
-  margin-left: 880px;
+  line-height: 1.5;
 }
 
 /* Footer */
@@ -270,28 +192,21 @@ body {
   height: 300px;
   background-color: #333;
   color: #fff;
-  margin-top: 40px;
+  padding: 40px 40px;
 }
 
 .footer-container {
   display: flex;
-  align-items: flex-start;
-}
-
-.footer-links{
-  margin-left: 40px;
-  margin-top: 50px;
+  justify-content: space-between;
 }
 
 .footer-links h3{
   font-size: 1.2rem;
-  text-align: left;
   margin-bottom: 10px;    
 }
 
 .footer-links ul {
   list-style-type: none;
-  margin-top: 30px;
 }
 
 .footer-links ul li a {
@@ -303,23 +218,15 @@ body {
 }
 
 .footer-links a{
-  margin-top: 20px;
-}
-
-.footer-service{
-  margin-top: 50px;
-  margin-left: 150px;
 }
 
 .footer-service h3{
   font-size: 1.2rem;
-  text-align: left;
+  margin-bottom: 10px;  
 }
 
 .footer-service ul{
   list-style-type: none;
-  padding: 10px;
-  margin-top: 30px;
 }
 
 .footer-service ul li a {
@@ -341,15 +248,11 @@ body {
   display: flex;
   flex-direction: row;
   gap: 10px;
-  margin-left: 550px;
   cursor: pointer;
-  
 }
 
 .footer-social h4{
   font-size: 1.2rem;
-  margin-top: 50px;
-  margin-left: 550px;
 }
 
 .footer-bottom {
@@ -357,11 +260,64 @@ body {
   text-align: center;
   font-size: 0.9rem;
   color: #aaa;
-  margin-top: 70px;
-  margin-left: 30px;
+  margin-top: 100px;
 }
 
-@media (max-width:900px) {
+@media (max-width:1050px) {
+  .contact-section {
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    padding: 30px 50px;
+    background-color: #5D2380;
+    color: #fff;
+  }
+  
+  .header {
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+    margin-bottom: 20px;
+  }
+  
+  .line {
+    border: 0;
+    width: 50px; 
+    border-top: 3px solid #a200ff; 
+    margin-right: 5px; 
+    margin-top: 5px;
+  
+  }
+  
+  .header h3 {
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #ffffff;
+  }
+  
+  .contact-content {
+    max-width: 500px;
+  }
+  
+  .contact-content h2 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .contact-content p {
+    font-size: 12px;
+    line-height: 1.5;
+  }
+  
+  
+  .contact-image img {
+    max-width: 300px;
+  }
+}
+
+@media (max-width:800px) {
   .navbar-center {
     display: none; /* Sembunyikan menu utama */
   }
@@ -380,5 +336,71 @@ body {
 
   .dropdown.show .dropdown-menu {
     display: block; /* Tampilkan menu dropdown saat dropdown aktif */
+  }
+  .info-section {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    padding: 30px 30px;
+  }
+}
+
+@media (max-width:600px) {
+  .contact-section {
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    padding: 30px 30px;
+    background-color: #5D2380;
+    color: #fff;
+  }
+  
+  .header {
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+    margin-bottom: 20px;
+  }
+  
+  .line {
+    border: 0;
+    width: 50px; 
+    border-top: 3px solid #a200ff; 
+    margin-right: 5px; 
+    margin-top: 5px;
+  
+  }
+  
+  .header h3 {
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #ffffff;
+  }
+  
+  .contact-content {
+    max-width: 300px;
+  }
+  
+  .contact-content h2 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .contact-content p {
+    font-size: 12px;
+    line-height: 1.5;
+  }
+  
+  .contact-image img {
+    max-width: 250px;
+  }
+
+  .info-section {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    padding: 30px 30px;
   }
 }
