--- a/(FE)/css/aboutus.css
+++ b/(FE)/css/aboutus.css
@@ -275,27 +275,21 @@ body {
   height: 300px;
   background-color: #333;
   color: #fff;
+  padding: 40px 40px;
 }
 
 .footer-container {
   display: flex;
-  align-items: flex-start;
-}
-
-.footer-links{
-  margin-left: 40px;
-  margin-top: 50px;
+  justify-content: space-between;
 }
 
 .footer-links h3{
   font-size: 1.2rem;
-  text-align: left;
   margin-bottom: 10px;    
 }
 
 .footer-links ul {
   list-style-type: none;
-  margin-top: 30px;
 }
 
 .footer-links ul li a {
@@ -306,24 +300,13 @@ body {
   cursor: pointer;
 }
 
-.footer-links a{
-  margin-top: 20px;
-}
-
-.footer-service{
-  margin-top: 50px;
-  margin-left: 150px;
-}
-
 .footer-service h3{
   font-size: 1.2rem;
-  text-align: left;
+  margin-bottom: 10px;  
 }
 
 .footer-service ul{
   list-style-type: none;
-  padding: 10px;
-  margin-top: 30px;
 }
 
 .footer-service ul li a {
@@ -337,7 +320,6 @@ body {
 .footer-social {
   display: flex;
   flex-direction: column;
-  margin-left: 550px;
   gap: 10px;
   cursor: pointer;
 }
@@ -347,16 +329,10 @@ body {
   flex-direction: row;
   gap: 10px;
   cursor: pointer;
-  
-}
-.call .envelope{
-  text-align: left;
-  margin-left: 550px;
 }
 
 .footer-social h4{
   font-size: 1.2rem;
-  margin-top: 50px;
 }
 
 .footer-bottom {
@@ -364,8 +340,7 @@ body {
   text-align: center;
   font-size: 0.9rem;
   color: #aaa;
-  margin-top: 70px;
-  margin-left: 30px;
+  margin-top: 100px;
 }
 
 /* Mobile Version */
