--- a/(FE)/css/aboutus.css
+++ b/(FE)/css/aboutus.css
@@ -228,20 +228,21 @@ body {
 /* UMKM Section */
 .umkm-section {
   display: flex;
+  justify-content: center;
   padding: 60px 40px;
-  flex-direction: row;
   background-color: #e8f7f3;
-  position: relative;
 }
 
 .umkm-content {
   display: flex;
+  flex-direction: row;
   padding: 20px;
 }
 
 .umkm-text {
     width: 500px;
     font-family: 'Poppins';
+    text-align: start;
     margin: 0 50px;
 }
 
@@ -441,9 +442,8 @@ body {
 
   .umkm-image img {
     width: 100%;
-    max-width: 300px;
+    max-width: 400px;
     padding: 10px 0;
-    border-radius: 30px;
   }
 
   .umkm-text {
