--- a/(FE)/css/homepage.css
+++ b/(FE)/css/homepage.css
@@ -373,6 +373,9 @@
   }
 
   @media (max-width: 768px) {
+    .navbar{
+      padding: 5px 10px;
+    }
     .navbar-center {
       display: none; /* Sembunyikan menu utama */
     }
@@ -409,9 +412,9 @@
       margin-bottom: 10px;
    }
     .purple-box {
+        max-width: 650px;
         width: 100%;
         height: 80%;
-        margin: 20px 0;
     
     }
     .purple-box img{
