--- a/(FE)/css/detail.css
+++ b/(FE)/css/detail.css
@@ -65,7 +65,7 @@
   border: 1px solid #ffffff;
   padding: 5px;
   cursor: pointer;
-  display: none; /* Tersembunyi pada layar besar */
+
 }
 
 .dropdown-menu {
@@ -136,16 +136,13 @@
   margin-top: 4px;
 }
 
-.box-body {
+.text {
+  display: flex;
   border: 1px solid #000;
   border-radius: 8px;
-  padding: 15px;
-  margin-top: 15px;
+  padding: 10px;
   width: 400px;
   height: 200px; 
-}
-
-.text {
   font-size: 14px;
   color: #818181;
 }
@@ -275,7 +272,7 @@
     margin-top: 100px;
   }
 
-@media (max-width:800px) {
+@media (max-width:768px) {
   .navbar-center {
     display: none; /* Sembunyikan menu utama */
   }
@@ -310,7 +307,7 @@
     height: auto;
     min-height: 150px;
     background-color: #333;
-    padding: 20px 10px;
+    padding: 20px 20px;
     color: #fff;
   }
 
@@ -395,7 +392,7 @@
     padding: 15px;
     margin-top: 15px;
     width: auto;
-    height: 200px; 
+    height: auto; 
   }
   
 }
