--- a/(FE)/css/homepage.css
+++ b/(FE)/css/homepage.css
@@ -27,7 +27,6 @@
     display: flex;
     align-items: center;
     gap: 15px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
   
   .logo {
@@ -515,6 +514,11 @@
     }
   }
   @media (max-width:450px) {
+    .site-name {
+      font-weight: bold;
+      font-size: 1.2rem;
+      color: #000;
+    }
     .main-content h2 {
       text-align: justify;
       font-size: 1.8em;
