--- a/(FE)/css/homepage2.css
+++ b/(FE)/css/homepage2.css
@@ -27,7 +27,6 @@ body {
     display: flex;
     align-items: center;
     gap: 15px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
   
   .logo {
@@ -100,8 +99,6 @@ body {
     color: #6F4B9B;
   }
 
-
-
 .product-card {
   display: inline-block;
   max-width: 345px;
@@ -152,6 +149,7 @@ body {
 }
 
 .footer {
+  margin-top: 20px;
   width: 100%;
   height: 300px;
   background-color: #333;
