--- a/(FE)/css/detail.css
+++ b/(FE)/css/detail.css
@@ -65,7 +65,6 @@
   border: 1px solid #ffffff;
   padding: 5px;
   cursor: pointer;
-
 }
 
 .dropdown-menu {
@@ -190,6 +189,7 @@
   padding-bottom: 10px;
   margin-left: 5px;
   }
+
   .whatsapp:hover {
     background-color: rgba(0, 154, 54, 0.798);
     opacity: 0.7;
@@ -382,11 +382,24 @@
   }
 }
 @media (max-width:450px) {
+  .navbar{
+    padding: 5px 10px;
+  }
+
+  .site-name {
+    flex-grow: 1;
+    font-size: 20px; 
+    font-weight: bold;
+    font-style: italic; 
+    line-height: 1.0rem; 
+    margin: 0; 
+  }
+
   .content{
     padding: 20px;
   }
 
-  .box-body {
+  .text {
     border: 1px solid #000;
     border-radius: 8px;
     padding: 15px;
@@ -395,4 +408,29 @@
     height: auto; 
   }
   
+  .footer-social {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .social-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .footer-social h4{
+    font-size: 0.9rem;
+  }
+  
+  .footer-bottom {
+    position: absolute;
+    text-align: center;
+    font-size: 0.7rem;
+    color: #aaa;
+    margin-top: 15px;
+  }
 }
